# fusilli

./: .coverage  .gitignore  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/: api.rst  choosing_model.rst  conf.py  contact_me.rst  customising_training.rst  data_loading.rst  developers_guide.rst  experiment_setup.rst  fusion_model_explanations.rst  getting_started.rst  glossary.rst  index.rst  installation.rst  introduction.rst  logging_with_wandb.rst  modifying_models.rst  quick_start.rst  requirements.txt  sg_execution_times.rst  user_guide.rst
docs/JOSS/: paper.bib  paper.md
docs/_build/: .buildinfo  api.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: florencestheme.css
docs/auto_examples/: index.rst  index.rst.new  modify_layer_sizes.ipynb  modify_layer_sizes.rst  plot_one_model_binary_kfold.ipynb  plot_one_model_binary_kfold.py  plot_one_model_binary_kfold.py.md5  plot_one_model_binary_kfold.rst  plot_one_model_binary_kfold_codeobj.pickle  plot_two_models_traintest.ipynb  plot_two_models_traintest.py  plot_two_models_traintest.py.md5  plot_two_models_traintest.rst  plot_two_models_traintest_codeobj.pickle  sg_execution_times.rst  two_models_traintest.ipynb  two_models_traintest.py  two_models_traintest.rst  two_models_traintest_codeobj.pickle
docs/autosummary/: fusilli.data.rst  fusilli.eval.Plotter.rst  fusilli.fusion_models.concat_img_maps_tabular_data.rst  fusilli.fusion_models.img_tab_decision.rst  fusilli.fusion_models.mcvae_tab.rst  fusilli.fusionmodels.rst  fusilli.fusionmodels.tabularfusion.activation.rst  fusilli.fusionmodels.tabularfusion.attention_and_activation.rst  fusilli.fusionmodels.tabularfusion.attention_weighted_GNN.rst  fusilli.fusionmodels.tabularfusion.concat_data.rst  fusilli.fusionmodels.tabularfusion.mcvae_model.rst  fusilli.fusionmodels.tabularfusion.rst  fusilli.fusionmodels.tabularfusion.tab_crossmodal_att.rst  fusilli.fusionmodels.tabularimagefusion.denoise_tab_img_maps.rst  fusilli.fusionmodels.unimodal.rst  fusilli.fusionmodels.unimodal.tabular1_unimodal.rst  fusilli.fusionmodels.unimodal.tabular2.rst  fusilli.fusionmodels.unimodal.tabular2_unimodal.rst  fusilli.utils.model_chooser.rst  fusilli.utils.model_modifier.rst  fusilli.utils.training_utils.rst  fusionlibrary.data.rst  fusionlibrary.eval.Plotter.rst  fusionlibrary.eval_functions.Plotter.rst  fusionlibrary.eval_functions.rst  fusionlibrary.fusion_models.base_model.rst  fusionlibrary.fusion_models.base_pl_model.rst  fusionlibrary.fusion_models.concat_img_latent_tab_doubleloss.rst  fusionlibrary.fusion_models.concat_img_latent_tab_doubletrain.rst  fusionlibrary.fusion_models.concat_tabular_data.rst  fusionlibrary.fusion_models.crossmodal_att.rst  fusionlibrary.fusion_models.denoise_tab_img_maps.rst  fusionlibrary.fusion_models.edge_corr_gnn.rst  fusionlibrary.fusion_models.img_tab_channelwise_att.rst  fusionlibrary.fusion_models.img_tab_decision.rst  fusionlibrary.fusion_models.img_unimodal.rst  fusionlibrary.fusion_models.mcvae_tab.rst  fusionlibrary.fusion_models.rst  fusionlibrary.fusion_models.tab_crossmodal_att.rst  (+8 more)
docs/contributing_examples/: index.rst  (+22 more)
fusilli/: data.py  eval.py  train.py
fusilli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fusionlibrary/: datamodules.py  eval.py  eval_functions.py  train.py  train_functions.py
fusionlibrary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_datamodules.py  test_downsample_img_batch.py
(+1591 files in other folders)
